@@ -66,7 +66,7 @@
 
 -----------------------------------------------------------------------------*/
 #define _BSD_SOURCE 1      /* Make sure strdup() is in stdio.h */
-#define _XOPEN_SOURCE 500  /* Make sure strdup() is in string.h */
+#define _XOPEN_SOURCE 600  /* Make sure strdup() is in string.h */
 
 #define MAX_PREFIXES 10
 
