@@ -10,7 +10,7 @@
 */
 
 #define _BSD_SOURCE 1      /* Make sure strdup() is in string.h */
-#define _XOPEN_SOURCE 500  /* Make sure strdup() is in string.h */
+#define _XOPEN_SOURCE 600  /* Make sure strdup() is in string.h */
 
 #include <assert.h>
 #include <stdlib.h>
